ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/RegressionTests/parser645086_2/input.ts.stderr
error: Expected a semicolon
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/RegressionTests/parser645086_2/input.ts:1:14
  |
1 | var v = /[^]/]/
  |              ^

